Change image paths to relative URLs
Updated image source paths to relative URLs for better portability.

--- a/index.html
+++ b/index.html
@@ -48,28 +48,28 @@
         <p>Pick the best fit</p>
         <div class="recommended__container">
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c1.jpg">
+                <img src="./images/c1.jpg">
                 <h3>2023 Python Data Visualisation Materclass</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c2.jpg">
+                <img src="./images/c2.jpg">
                 <h3>Web Development bootcamp 2023 by EMC academy</h3>
                 <p>Col Steele</p>
                 <p>4.9⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c3.jpg">
+                <img src="./images/c3.jpg">
                 <h3>Advanced JavaScript concepts by EMC Academy</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c4.jpg">
+                <img src="./images/c4.jpg">
                 <h3>2023 Materclass of Java by EMC Academy</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
@@ -100,56 +100,56 @@
         <p class="popular">Pick the best fit</p>
         <div class="popular__container">
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c8.jpg">
+                <img src=",/images/c8.jpg">
                 <h3>Basics of HTML and CSS by EMC academy</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c2.jpg">
+                <img src="./images/c2.jpg">
                 <h3>Web Development  by EMC academy</h3>
                 <p>Col Steele</p>
                 <p>4.9⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c7.jpg">
+                <img src="./images/c7.jpg">
                 <h3>Promt engineer concepts by EMC Academy</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c4.jpg">
+                <img src="./images/c4.jpg">
                 <h3>2023 Materclass of Java by EMC Academy</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c6.jpg">
+                <img src="./images/c6.jpg">
                 <h3>Cyber Security concepts for beginners by EMC</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c1.jpg">
+                <img src="./images/c1.jpg">
                 <h3>2023 Python Data Visualisation Materclass</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c4.jpg">
+                <img src="./images/c5.jpg">
                 <h3>AI and Machine Learning advanced bootcampy 2025</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\welcome\Desktop\FSWD\CSS\Portfolio\udemy-clone\images\c3.jpg">
+                <img src="./images/c3.jpg">
                 <h3>Advanced JavaScript concepts by EMC Academy</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
@@ -184,5 +184,6 @@
     </div>
 
 </body>
+
 
 </html>
