--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p class="popular">Pick the best fit</p>
         <div class="popular__container">
             <div class="course-card">
-                <img src=",/images/c8.jpg">
+                <img src="./images/c8.jpg">
                 <h3>Basics of HTML and CSS by EMC academy</h3>
                 <p>Col Steele</p>
                 <p>4.9 ⭐⭐⭐⭐</p>
@@ -187,3 +187,4 @@
 
 
 </html>
+
